archivos html y css tercera evaluación

--- a/Segunda-Evaluación/style-segundotrimestre.css
+++ b/Segunda-Evaluación/style-segundotrimestre.css
@@ -1,5 +1,5 @@
-* {
-    border: solid black;
+body {
+    border: 5px solid black;
 }
 h1 {
     font-size: 30px;
@@ -17,20 +17,21 @@ header, section, footer, aside, article {
 .agrupar {
     margin-left: auto;
     margin-right: auto;
-    margin-top: 20px;
-    margin-bottom: 15px;
-    padding: 20px;
+    margin-top: auto;
+    margin-bottom: auto;
 }
 .cabecera {
-    background: #fffbb9;
-    border: solid black;
+    background: #b8e994;
     padding: 10px;
     text-align: center;
+    margin: 5px;
+    border: 2px solid black;
 }
 .menu {
-    background: #7bed9f;
+    background: #82ccdd;
     padding: 5px;
-    margin-top: 5px;
+    margin: 5px;
+    border: 2px solid black;
 }
 .menu li {
     list-style: none;
@@ -49,19 +50,30 @@ time {
 
 }
 article {
-    background: #48dbfb;
+    background: #fffbb9;
     padding: 10px;
     border: 1px solid #999;
     margin-top: 10px;
 
+}
+img {
+    width: 500px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 20px;
+    margin-bottom: 15px;
+    padding: 20px;
 }
 .info {
     margin: 20px;
     width: auto;
 }
 footer {
+    text-align: center;
     clear: both;
     padding: 20px;
     background: #2d3436;
     color: #ffffff;
+    margin: 5px;
 }
