--- a/Primera-Evaluación/style-primertrimestre.css
+++ b/Primera-Evaluación/style-primertrimestre.css
@@ -1,3 +1,6 @@
+body {
+    border: 5px solid black;
+}
 h1 {
     font-size: 30px;
     font-family: sans-serif;
@@ -7,6 +10,13 @@ h2 {
     font-size: 20px;
     font-family: sans-serif;
     font-weight: bold;
+    text-align: center;
+}
+h3 {
+    font-size: 15px;
+    font-family: sans-serif;
+    font-weight: bold;
+    text-align: center;
 }
 header, section, footer, aside, article {
     display: block;
@@ -14,20 +24,21 @@ header, section, footer, aside, article {
 .agrupar {
     margin-left: auto;
     margin-right: auto;
-    margin-top: 20px;
-    margin-bottom: 15px;
-    padding: 20px;
+    margin-top: auto;
+    margin-bottom: auto;
 }
 .cabecera {
-    background: #fffbb9;
-    border: solid black;
+    background: #b8e994;
     padding: 10px;
     text-align: center;
+    margin: 5px;
+    border: 2px solid black;
 }
 .menu {
-    background: #7bed9f;
+    background: #82ccdd;
     padding: 5px;
-    margin-top: 5px;
+    margin: 5px;
+    border: 2px solid black;
 }
 .menu li {
     list-style: none;
@@ -39,6 +50,7 @@ header, section, footer, aside, article {
 .seccion {
     margin: 20px;
     width: auto;
+    border: 1px solid black;
 }
 time {
     color: #130f40;
@@ -46,19 +58,30 @@ time {
 
 }
 article {
-    background: #48dbfb;
+    background: #fffbb9;
     padding: 10px;
     border: 1px solid #999;
-    margin-top: 10px;
+    margin: 10px 10px;
 
+}
+img {
+    width: 500px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 20px;
+    margin-bottom: 15px;
+    padding: 20px;
 }
 .info {
     margin: 20px;
     width: auto;
 }
 footer {
+    text-align: center;
     clear: both;
     padding: 20px;
     background: #2d3436;
     color: #ffffff;
+    margin: 5px;
 }
